# ratatui-interact

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  accordion_demo.rs  animated_text_demo.rs  breadcrumb_demo.rs  button_demo.rs  checkbox_demo.rs  context_menu_demo.rs  copyable_pane_demo.rs  dialog_demo.rs  diff_viewer_demo.rs  display_demo.rs  explorer_log_demo.rs  hotkey_dialog_demo.rs  input_demo.rs  marquee_demo.rs  menu_bar_demo.rs  mouse_pointer_demo.rs  navigation_demo.rs  select_demo.rs  spinner_demo.rs  split_pane_demo.rs  tab_view_demo.rs  textarea_demo.rs  theme_demo.rs  toast_stack_demo.rs
plans/: toast-next-level.md
src/: lib.rs  theme.rs
src/components/: accordion.rs  animated_text.rs  breadcrumb.rs  button.rs  checkbox.rs  container.rs  context_menu.rs  diff_viewer.rs  file_explorer.rs  input.rs  list_picker.rs  log_viewer.rs  marquee.rs  menu_bar.rs  mod.rs  mouse_pointer.rs  paragraph_ext.rs  progress.rs  scrollable_content.rs  select.rs  spinner.rs  split_pane.rs  step_display.rs  tab_view.rs  textarea.rs  toast.rs  toast_stack.rs  tree_view.rs
src/components/hotkey_dialog/: handlers.rs  mod.rs  state.rs  style.rs  traits.rs  widget.rs
src/events/: handlers.rs  mod.rs
src/state/: focus.rs  mod.rs
src/traits/: clickable.rs  container.rs  focusable.rs  mod.rs
src/utils/: ansi.rs  clipboard.rs  display.rs  mod.rs  mouse_capture.rs  view_copy.rs
