[package]
name = "ratatui-extension"
version = "0.1.0"
edition = "2024"
description = "Reusable TUI components extending ratatui with focus and mouse support"
license = "MIT"
authors = ["Brainwires Team"]
keywords = ["tui", "ratatui", "widgets", "ui-components"]
repository = "https://github.com/Brainwires/ratatui-extension"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
