[package]
name = "ratatui-interact"
version = "0.1.0"
edition = "2024"
description = "Interactive TUI components for ratatui with focus management and mouse support"
license = "MIT"
authors = ["Brainwires Team"]
keywords = ["tui", "ratatui", "widgets", "focus", "mouse"]
categories = ["command-line-interface", "gui"]
repository = "https://github.com/Brainwires/ratatui-interact"
homepage = "https://github.com/Brainwires/ratatui-interact"
documentation = "https://docs.rs/ratatui-interact"
readme = "README.md"

[dependencies]
# TUI framework
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = []
